--- a/index.html
+++ b/index.html
@@ -52,27 +52,27 @@
     <section class="videos-section">
         <h1>Tutoriales recientes</h1>
         <div class="videos-contenedor contenedor">
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://youtube.com/embed/M26iIqmqWkI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué es el Big Data?</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://youtube.com/embed/h4Af5bbFAq0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué es el cloud computing?</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://youtube.com/embed/FP_robAWyGE" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Cómo se creó el iPhone? El teléfono que lo cambió todo</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://youtube.com/embed/mKCcki6azHo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué es blockchain y cómo funciona?</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://youtube.com/embed/STNnG5K3jdM" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Cómo se crean las páginas web?</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://youtube.com/embed/cuBqxOvkhi4" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>UNIX: Como el SO más popular del pasado cayó ante... ¿LINUX?</h2>
             </div>
