--- a/categorias/ia.html
+++ b/categorias/ia.html
@@ -29,7 +29,7 @@
                 <p>¿Cómo funciona ChatGPT y toda la inteligencia artificial? (Machine Learning).</p>
                 <a href="">Ver Aqui <span>	&rarr;</span></a>
             </div>
-            <div class="popular-video">
+            <div class="popular-video" data-aos="flip-right">
                 <iframe width="250" height="315" src="https://www.youtube.com/embed/UTkYv9-0fL8" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
@@ -37,27 +37,27 @@
     <section class="videos-section">
         <h1>Tutoriales e Informacion</h1>
         <div class="videos-contenedor contenedor">
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/_tA5cinv0U8" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué es y cómo funciona la INTELIGENCIA ARTIFICIAL?</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/aaECeI8_RAU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Y si la INTELIGENCIA ARTIFICIAL lo va a cambiar TODO?</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/kQPY2H0d19w" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>Los RIESGOS de la Inteligencia Artificial que no todos te cuentan</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/rbQsUDOxMaU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>Padre de la Inteligencia Artificial renuncia y advierte amenaza para la humanidad</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/TETejHAJOGc" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Debemos preocuparnos por la inteligencia artificial?</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/3eMmmj3roOs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué significa realmente "Inteligencia Artificial"? Subespacios, pareidolias y creatividad.</h2>
             </div>
