--- a/categorias/machine.html
+++ b/categorias/machine.html
@@ -29,7 +29,7 @@
                 <p>QUÉ ES EL MACHINE LEARNING Y CÓMO FUNCIONA</p>
                 <a href="">Ver Aqui<span>	&rarr;</span></a>
             </div>
-            <div class="popular-video">
+            <div class="popular-video" data-aos="flip-right">
                 <iframe width="250" height="315" src="https://www.youtube.com/embed/R52sBUnHhEo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
@@ -37,27 +37,27 @@
     <section class="videos-section">
         <h1>Tutoriales e Informacion</h1>
         <div class="videos-contenedor contenedor">
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/8_9v3_iiUHs" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué es machine learning? - explicación sencilla</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/xrQ1YH0PnrM" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué es machine learning? Aprendizaje automático</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/E7iBIzEhKnQ" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>Introducción a Machine Learning, Tensorflow y redes neuronales | UNIR OPENCLASS</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/7ClLKBUvmRk" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>Todos podemos aprender Machine learning</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/_oF7z-6QU4o" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>¿Qué es el Machine Learning? - Fundamentos del Machine Learning Ep. 1</h2>
             </div>
-            <div class="video">
+            <div class="video" data-aos="flip-right">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/vj_iUBJbRWg" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <h2>Primeros pasos en CV - Fundamentos del Machine Learning Ep. 2</h2>
             </div>
