--- a/categorias/virtual.html
+++ b/categorias/virtual.html
@@ -29,7 +29,7 @@
                 <p>¿Que es la Realidad Virtual?¿Como Funciona?</p>
                 <a href="">Ver Aqui <span>	&rarr;</span></a>
             </div>
-            <div class="popular-video">
+            <div class="popular-video" data-aos="flip-right">
                 <iframe width="250" height="315" src="https://www.youtube.com/embed/Gya9kW1AyHo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
@@ -37,29 +37,29 @@
     <section class="videos-section">
         <h1>Tutoriales recientes</h1>
         <div class="videos-contenedor contenedor">
-            <div class="video">
-                <iframe width="560" height="315" src="https://youtube.com/embed/M26iIqmqWkI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>¿Qué es el Big Data?</h2>
+            <div class="video" data-aos="flip-right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IzAuGa7YKeU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h2>Que es la Realidad Virtual y Realidad Aumentada</h2>
             </div>
-            <div class="video">
-                <iframe width="560" height="315" src="https://youtube.com/embed/h4Af5bbFAq0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>¿Qué es el cloud computing?</h2>
+            <div class="video" data-aos="flip-right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LMv329VkZVw"title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h2>Realidad Virtual | Historia, evolución y futuro</h2>
             </div>
-            <div class="video">
-                <iframe width="560" height="315" src="https://youtube.com/embed/FP_robAWyGE" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>¿Cómo se creó el iPhone? El teléfono que lo cambió todo</h2>
+            <div class="video" data-aos="flip-right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/ahjAKiTdpbc" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h2>¿Qué es realidad virtual? | tipos de realidad virtual | Explicado en 5 minutos</h2>
             </div>
-            <div class="video">
-                <iframe width="560" height="315" src="https://youtube.com/embed/mKCcki6azHo" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>¿Qué es blockchain y cómo funciona?</h2>
+            <div class="video" data-aos="flip-right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/jOCWX9fCcOg" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h2>¿Qué es y para qué sirve la realidad aumentada??</h2>
             </div>
-            <div class="video">
-                <iframe width="560" height="315" src="https://youtube.com/embed/STNnG5K3jdM" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>¿Cómo se crean las páginas web?</h2>
+            <div class="video" data-aos="flip-right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/9iXuSU6ck8s"title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h2>Realidad virtual [Características,tipos, dispositivos, aplicaciones, Ventajas y desventajas]</h2>
             </div>
-            <div class="video">
-                <iframe width="560" height="315" src="https://youtube.com/embed/cuBqxOvkhi4" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                <h2>UNIX: Como el SO más popular del pasado cayó ante... ¿LINUX?</h2>
+            <div class="video" data-aos="flip-right">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/yve0r_vwBlI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h2>¿Cómo funciona el nuevo Centro de Entrenamiento de Realidad Virtual de la Policía en la CDMX?</h2>
             </div>
         </div>
     </section>
