--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-contenido contenedor" data-aos="fade-right">
             <div class="hero-textos">
                 <h1>Cursos & Tutoriales</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                <p>Es importante estar al tanto de las nuevas tecnologías, ya que están en constante evolución y pueden tener un impacto significativo en nuestras vidas. Al conocer y comprender estas nuevas tecnologías, podemos estar mejor preparados para adaptarnos a un mundo en constante cambio y aprovechar al máximo las oportunidades que nos brindan. Además, tener conocimientos sobre nuevas tecnologías puede ser beneficioso en el ámbito profesional, ayudándonos a ser más competitivos y estar actualizados con las últimas tendencias y prácticas. </p>
             </div>
             <div class="hero-image">
                 <img src="https://assets.website-files.com/610d3982dafde3d588c5b77b/6320cc62c59b1e9f0d0f7dd5_learn-hero-img.png" alt="">
