--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="">Inicio</a>
                 <a href="">Topicos</a>
                 <a href="">Sobre</a>
-                <a href="">Contacto</a>
+                <a href="contacto/index.html">Contacto</a>
                 <div class="nav-links-registro">
                     <a id="registro" href="form/index.html">Registrarse</a>
                 </div>
