--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                 <div class="f-seccion-contacto">
                     <h2 href="">Contacto</h2>
                     <div class="redes-sociales">
-                        <img src="icons/fb.svg" alt="">
-                        <img src="icons/insta.svg" alt="">
-                        <img src="icons/lkdin.svg" alt="">
-                        <img src="icons/tw.svg" alt="">
+                        <a class="icono" href="https://www.facebook.com/alejandrobrunomarsxd?mibextid=ZbWKwL" target="_blank"><img src="icons/fb.svg" alt=""></a>
+                        <a class="icono2" href="https://instagram.com/angie_april22?igshid=MzNlNGNkZWQ4Mg==" target="_blank"><img src="icons/insta.svg" alt=""></a>
+                        <a class="icono3" href="https://pe.linkedin.com/in/alejandro-plasencia-9948b8246" target="_blank"><img src="icons/lkdin.svg" alt=""></a>
+                        <a class="icono4" href= "https://wa.me/51947653585"target="_blank"><img src="icons/wasap.svg" alt=""></a>
                     </div>
                 </div>
             </div>
